<resources>
    <string name="app_name">Travelcy</string>
    <string name="title_convert">CONVERT</string>
    <string name="title_split">SPLIT</string>
    <string name="title_settings">SETTINGS</string>
    <string name="bill_tip">Tip</string>
    <string name="bill_tax">Tax</string>
    <string name="bill_total_amount">Total</string>
    <string name="bill_item_description">Description</string>
    <string name="bill_item_amount">Amount</string>
    <string name="bill_item_quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="person_hint">Person</string>
    <string name="new_person_hint">Add person</string>
    <string name="title_persons">People</string>
    <string name="total_per_person">Total per person</string>
    <string name="settings_budget_title">Budget</string>
    <string name="settings_budget_amount">Amount</string>
    <string name="settings_currency_list_title">Currencies</string>
    <string name="settings_update_title">Exchange Rates</string>
    <string name="settings_auto_update">Automatically update</string>
    <string name="settings_last_updated">Last updated: %1$s</string>
    <string name="settings_update_now">Update now</string>
    <string name="budget_remaining">Budget remaining</string>
    <string name="bill_tip_percentage_hint">Percentage</string>
    <string name="bill_tip_amount_hint">Amount</string>
</resources>