<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_convert">

    <fragment
        android:id="@+id/navigation_convert"
        android:name="com.travelcy.travelcy.ui.convert.ConvertFragment"
        android:label="@string/title_convert"
        tools:layout="@layout/fragment_convert" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.travelcy.travelcy.ui.split.SplitFragment"
        android:label="@string/title_split"
        tools:layout="@layout/fragment_split" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.travelcy.travelcy.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>