<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="18dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bill_item_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_item_description"
        android:layout_marginBottom="18dp">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bill_item_amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_item_amount"
        android:layout_marginBottom="18dp">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bill_item_quantity_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_item_quantity">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>