<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:paddingBottom="56dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_budget_title"
        android:textColor="@color/colorMainFont"
        android:textSize="24sp"
        android:paddingHorizontal="32dp"
        android:paddingBottom="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_budget_amount_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_budget_amount"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_budget_amount"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_currency_list_title"
        android:textColor="@color/colorMainFont"
        android:textSize="24sp"
        android:paddingHorizontal="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settings_currency_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="always"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="32dp"
        />
</LinearLayout>